Revert "Changed flow_d and flow_c values"
This reverts commit 1414224d91ee2936d573cc195df435b4dd220993.

--- a/config.ini
+++ b/config.ini
@@ -142,10 +142,10 @@ rtscts = 0
 [Cpc:Concentration]
 # 16.67 * 0.984
 flow = 16.40328
-# 16.67 * 0.984 * 1.1
-flow_d = 18.043608
-# 0.984 *1.1
-flow_c = 1.0824
+# 16.67 * 0.984 (*1.1, correction not currently in use)
+flow_d = 16.40328
+# 0.984 (*1.1, correction not currently in use)
+flow_c = 0.984
 
 
 # Settings used in particle concentration calculations
