Changed max diameter until bug is found
Large particle generates voltage list more than 10V voltage
Daq can't handle over 10V voltages

--- a/config.ini
+++ b/config.ini
@@ -158,7 +158,7 @@ number_of_small_p = 8
 # Large particles settings
 # Diameter unit is nm
 large_p_diameter_min = 10.0e-9
-large_p_diameter_max = 820.0e-9
+large_p_diameter_max = 500.0e-9 #TODO: Revert back to 820.0e-9
 number_of_large_p = 25
 
 # Dma physical attributes
