Changed valve line numbers

--- a/config.ini
+++ b/config.ini
@@ -22,16 +22,16 @@ cpc_signal = PFI0
 # Digital I/O
 port_chan = port1
 # Total concentration valve
-conc_line = line1
+conc_line = line2
 # Sample flow bypass valve
-bypass_line = line2
+bypass_line = line1
 
 
 # Contains channel numbers, measured voltages and scaling variable values
 [NI_DAQ:Sensors]
 # Pressure sensor
 p_chan = ai1
-p_voltage = 4.042136752165347
+p_voltage = 4.108858579690133
 # Scaling:
 p_value_min = 60000.0
 p_value_max = 110000.0
@@ -40,7 +40,7 @@ p_v_max = 5.001
 
 # Temperature sensor
 t_chan = ai4
-t_voltage = 0.23405405778703164
+t_voltage = 0.23076725515273497
 # Scaling:
 t_value_min = 0.0
 t_value_max = 100.0
@@ -49,7 +49,7 @@ t_v_max = 1.0
 
 # RH sensor
 rh_chan = ai2
-rh_voltage = 2.4657908875250003
+rh_voltage = 2.2774574644695935
 # Scaling:
 rh_value_min = 0.0
 rh_value_max = 100.0
@@ -58,7 +58,7 @@ rh_v_max = 5.0
 
 # High voltage input
 hvi_chan = ai0
-hvi_voltage = 9.6283397788987
+hvi_voltage = 0.0006910507269630856
 # Scaling:
 hvi_value_min = 9.7
 hvi_value_max = 9960
@@ -67,7 +67,7 @@ hvi_v_max = 9.811
 
 # High voltage output
 hvo_chan = ao0
-hvo_voltage = 11765.223650138263
+hvo_voltage = 0.0
 # Scaling:
 hvo_value_min = 0.00941
 hvo_value_max = 9.823
@@ -76,7 +76,7 @@ hvo_v_max = 9960
 
 # Pressure difference sensor
 f_chan = ai3
-f_voltage = 1.0143407600827583
+f_voltage = 1.2887885720211263
 # Scaling:
 f_value_min = 1.001
 f_value_max = 3.993
