--- a/config.ini
+++ b/config.ini
@@ -1,105 +1,98 @@
 # General notes on editing this file:
 # - Comments must be on their own line. E.g. 'device_id = Dev1 # Qwerty' doesn't work (Maybe there is a way to get it working)
-# - Section names propably allows whitespace but I wanted to avoid any potential problems by the naming convention currently used
+# - Section names probably allows whitespace but I wanted to avoid any potential problems by the naming convention currently used
 
 
-# General NI DAQ settings
+# General NI DAQ settings (use only numbers for values)
 [NI_DAQ]
-# Device name (identifier)
-device_id = Dev1
-# Smallest AI channel "name" in use (E.g. ai0)
-ai_min = ai0
-# Largest AI channel number in use (E.g. 4)
+# Device name (identifier). Not sure if prefix 'Dev' can be changed (ni_daqs file used Dev prefix)
+device_id = 1
+# Lowest used analog input channel
+ai_min = 0
+# Largest used analog input channel
 ai_max = 4
-# High voltage output channel
-hv_output_chan = ao0
+# Min voltage expected to measure in ai
+ai_min_v = -10.0
+# Max voltage expected to measure in ai
+ai_max_v = 10.0
 # Pulse generator channel for the blower
-blower_pulse_chan = ctr0
+blower_pulse_chan = 0
 # Pulse edge counter channel for the Cpc
-cpc_counter_chan = ctr1
+cpc_counter_chan = 1
 # Input channel for counting cpc pulses
-cpc_signal = PFI0
-# Digital I/O
-port_chan = port1
-# Total concentration valve
-conc_line = line2
-# Sample flow bypass valve
-bypass_line = line1
+cpc_pulses_chan = 0
+# Digital I/O port channel
+port_chan = 1
+# Total concentration valve channel
+conc_line_chan = 3
+# Sample flow bypass valve channel
+bypass_line_chan = 2
 
-
-# Contains channel numbers, measured voltages and scaling variable values
-[NI_DAQ:Sensors]
+# Contains channel numbers and scaling variables
+[NI_DAQ:Scaling]
 # Pressure sensor
-p_chan = ai1
-p_voltage = 4.108858579690133
+p_chan = 4
 # Scaling:
 p_value_min = 60000.0
 p_value_max = 110000.0
-p_v_min = -0.003
-p_v_max = 5.001
+p_v_min = 0.0
+p_v_max = 5.0
 
 # Temperature sensor
-t_chan = ai4
-t_voltage = 0.23076725515273497
+t_chan = 1
 # Scaling:
-t_value_min = 0.0
-t_value_max = 100.0
-t_v_min = 0.0
-t_v_max = 1.0
+t_value_min = 16.2
+t_value_max = 22.6
+t_v_min = 0.613
+t_v_max = 0.6395
 
 # RH sensor
-rh_chan = ai2
-rh_voltage = 2.2774574644695935
+rh_chan = 2
 # Scaling:
 rh_value_min = 0.0
 rh_value_max = 100.0
-rh_v_min = 0.0
-rh_v_max = 5.0
+rh_v_min = 0.8260
+rh_v_max = 3.976
 
 # High voltage input
-hvi_chan = ai0
-hvi_voltage = 0.0006910507269630856
+hvi_chan = 0
 # Scaling:
-hvi_value_min = 9.7
-hvi_value_max = 9960
-hvi_v_min = 0.00964
-hvi_v_max = 9.811
+hvi_value_min = 9.9
+hvi_value_max = 10170
+hvi_v_min = 0.01
+hvi_v_max = 10.0
 
-# High voltage output
-hvo_chan = ao0
-hvo_voltage = 0.0
+# High voltage output (analog output)
+hvo_chan = 0
 # Scaling:
-hvo_value_min = 0.00941
-hvo_value_max = 9.823
-hvo_v_min = 9.7
-hvo_v_max = 9960
+hvo_value_min = 0.01
+hvo_value_max = 10.0
+hvo_v_min = 10.6
+hvo_v_max = 10180
 
 # Pressure difference sensor
-f_chan = ai3
-f_voltage = 1.2887885720211263
+f_chan = 3
 # Scaling:
-f_value_min = 1.001
-f_value_max = 3.993
-f_v_min = 1.07
-f_v_max = 1.29
+f_value_min = 1.005
+f_value_max = 3.8336
+f_v_min = 0.601
+f_v_max = 1.156
 
 
 # PID control for the blower
 [Pid]
-# l/min
-target_flow = 5
 # Hz
 frequency = 200.0
 # seconds
 sample_time = 0.1
 p = 0.02
-i = 0.06
-d = 0.005
+i = 0.004
+d = 0.003
 
 
 # Flow meter's serial port settings
 [Flow_Meter:Serial_port]
-port = COM2
+port = COM1
 baudrate = 38400
 bytesize = 8
 parity = N
@@ -109,7 +102,6 @@ timeout = 1
 xonxoff = 0
 # Hardware flow control
 rtscts = 0
-
 
 # Scaling settings for the flow meter
 [Flow_Meter:Scaling]
@@ -126,7 +118,7 @@ p_offset = 0
 
 # CPC's serial port settings
 [Cpc:Serial_port]
-port = COM3
+port = COM2
 baudrate = 115200
 bytesize = 8
 parity = N
@@ -138,31 +130,39 @@ xonxoff = 0
 rtscts = 0
 
 
+# Settings used in particle concentration calculations
+[Dma]
+# Small particles settings
+# Diameter unit is nm
+small_p_d_min = 6.0e-9
+small_p_d_max = 20.0e-9
+number_of_small_p = 8
+
+# Large particles settings
+# Diameter unit is nm
+large_p_d_min = 10.0e-9
+large_p_d_max = 820.0e-9
+number_of_large_p = 25
+
+# Dma physical attributes
+# Unit is meters
+length = 0.28
+in_electrode_r = 0.025
+out_electrode_r = 0.033
+
+# Automatic measurement loop settings
+[Automatic_measurement]
+# Time to count cpc's pulses (s)
+pulse_count_t = 5.0
+# Waiting time after one measurement loop (s)
+cycle_wait_t = 5.0
+# Time waited after voltage change (s)
+between_voltages_wait_t = 7.0
+
 # Variables are used for calculating the concentration
-[Cpc:Concentration]
 # 16.67 * 0.984
 flow = 16.40328
 # 16.67 * 0.984 (*1.1, correction not currently in use)
 flow_d = 16.40328
 # 0.984 (*1.1, correction not currently in use)
 flow_c = 0.984
-
-
-# Settings used in particle concentration calculations
-[Dma]
-# Small particles settings
-# Diameter unit is nm
-small_p_diameter_min = 6.0e-9
-small_p_diameter_max = 20.0e-9
-number_of_small_p = 8
-# Large particles settings
-# Diameter unit is nm
-large_p_diameter_min = 10.0e-9
-large_p_diameter_max = 820.0e-9
-number_of_large_p = 25
-
-# Dma physical attributes
-# Unit is meters
-length = 0.28
-inner_electrode_radius = 0.025
-outer_electrode_radius = 0.033
